--- a/src/stv-select.html
+++ b/src/stv-select.html
@@ -155,6 +155,9 @@
                         }
                     }
                 }
+            },
+            addOption: function(option) {
+                Polymer.dom(this.$.list).appendChild(option);
             }
         });
     </script>
