--- a/src/file/stv-folder-list-item.html
+++ b/src/file/stv-folder-list-item.html
@@ -26,6 +26,12 @@
             text-align: center;
         }
 
+        #size {
+            color: #444;
+            width: 80px;
+            text-align: center;
+        }
+
         .filename {
             width: 100%;
             overflow: hidden;
@@ -72,6 +78,7 @@
                     </template>
                     <div class="filename" title$="{{file.name}}">{{file.name}}</div>
                 </div>
+                <div id="size">{{computeSize(file)}}</div>
                 <div id="creationDate">{{computeDate(file)}}</div>
             </div>
         </template>
@@ -103,6 +110,13 @@
                 month: "short"
             }) + " " + date.getDate() + ", " + date.getFullYear();
         },
+        computeSize: function(file) {
+            if (file.type == "FILE") {
+                return Utils.humanFileSize(file.size);
+            } else {
+                return ".";
+            }
+        },
         computeIcon: function(file) {
             var icon
             if (file.job != null) {
@@ -113,9 +127,20 @@
                 "FILE": 'fa fa-file-o'
             };
             icon = iconMap[file.type];
+
+            if (file.format.indexOf("image") >= 0) {
+                icon = 'fa fa-file-image-o';
+            } else if (file.format == "text/plain" || file.format == "application/octet-stream") {
+                icon = 'fa fa-file-text-o';
+            } else if (file.format == "application/xml" || file.format == "application/x-sh") {
+                icon = 'fa fa-file-code-o';
+            }
+            console.log(file.name + " - " + file.format);
+
             if (window.BIOFORMATS != null && window.BIOFORMATS[file.bioformat] != null && window.BIOFORMATS[file.bioformat].icon != null) {
                 icon = "fa fa-" + window.BIOFORMATS[file.bioformat].icon
             }
+
             return icon;
         },
         computeJobIcon: function(job) {
