--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -404,6 +404,7 @@
                 this.$.stvLogin._login();
             },
             anonymousSign: function() {
+                this.$.stvSignup.name = "anonymous";
                 this.$.stvSignup.email = "anonymous@anonymous.anonymous";
                 this.$.stvSignup.password = "anonymous";
                 this.$.stvSignup._signup();
@@ -495,10 +496,10 @@
                 }
             },
             _checkUserName: function(userData) {
-                if (userData.email.indexOf('anonymous___') != -1) {
+                if (userData.name.indexOf('anonymous___') != -1) {
                     return 'anonymous';
                 } else {
-                    return userData.email;
+                    return userData.name;
                 }
             }
         });
