--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -428,6 +428,7 @@
                 this.userData = null;
                 this.selectedOption = 'home';
                 this.isLogged = false;
+                this.userText = '';
                 Cookies.expire('bioinfo_sid', {
                     path: window.location.pathname
                 });
