--- a/src/stv-remember.html
+++ b/src/stv-remember.html
@@ -131,6 +131,8 @@
                             }
                         }
                     });
+                }else{
+                    this.set('message', "Please, fill the field");
                 }
             }
         });
